modified the Cargo.toml file

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2024"
 authors = ["BM Monjur Morshed"]
 description = "A mini inference engine for running language models"
-license = "MIT OR Apache-2.0"
+license = "MIT"
 repository = "https://github.com/bmqube/minillm"
 homepage = "https://github.com/bmqube/minillm"
 documentation = "https://docs.rs/minillm"
