--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,4 +12,7 @@ readme = "README.md"
 exclude = ["target/", ".git/", ".gitignore"]
 
 [dependencies]
+hf-hub = "0.4.3"
+serde = {version = "1.0.225", features = ["derive"] }
+serde_json = "1.0.145"
 tokenizers = { version = "0.22.1", features = ["http"] }
