--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ readme = "README.md"
 exclude = ["target/", ".git/", ".gitignore"]
 
 [dependencies]
+dotenv = "0.15.0"
 hf-hub = "0.4.3"
 serde = {version = "1.0.225", features = ["derive"] }
 serde_json = "1.0.145"
