--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,8 @@ exclude = ["target/", ".git/", ".gitignore"]
 [dependencies]
 dotenv = "0.15.0"
 hf-hub = "0.4.3"
+ndarray = "0.16.1"
+safetensors = "0.6.2"
 serde = {version = "1.0.225", features = ["derive"] }
 serde_json = "1.0.145"
 tokenizers = { version = "0.22.1", features = ["http"] }
