added candle as a dependency. will rewrite the entire project using candle for tensor based ops and transformer internals.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,7 @@ name = "tokenization"
 path = "examples/tokenization.rs"
 
 [dependencies]
+candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.9.1", features = ["cuda"] }
 dotenv = "0.15.0"
 hf-hub = "0.4.3"
 ndarray = "0.16.1"
