--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,7 +34,11 @@ name = "tokenization"
 path = "examples/tokenization.rs"
 
 [dependencies]
-candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.9.1", features = ["cuda"] }
+anyhow = "1.0.100"
+candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.9.1" }
+candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.9.1" }
+candle-transformers = { git = "https://github.com/huggingface/candle.git", version = "0.9.1" }
+clap = { version = "4.5.48", features = ["derive"] }
 dotenv = "0.15.0"
 hf-hub = "0.4.3"
 ndarray = "0.16.1"
@@ -42,3 +46,4 @@ safetensors = "0.6.2"
 serde = {version = "1.0.225", features = ["derive"] }
 serde_json = "1.0.145"
 tokenizers = { version = "0.22.1", features = ["http"] }
+rand = "0.8"
